<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_health_status"
            android:title="@string/health_status" />
        <item
            android:id="@+id/nav_Prevention"
            android:title="@string/preventions" />
        <item
            android:id="@+id/nav_symptoms"
            android:title="@string/symptoms" />
        <item
            android:id="@+id/nav_slideshow"
            android:title="@string/popular_questions" />
    </group>

    <group>

        <item android:title="@string/settings">

            <menu>
                <item
                    app:actionViewClass="androidx.appcompat.widget.SwitchCompat"
                    android:id="@+id/nav_notifications"
                    android:title="@string/notifications" />

                <item
                    app:actionViewClass="androidx.appcompat.widget.SwitchCompat"
                    android:id="@+id/nav_dark_mode"
                    android:title="@string/dark_mode" />

            </menu>

        </item>

    </group>
</menu>