<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_state_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_medium"
            android:text="@string/state_ut"
            android:textAppearance="?attr/textAppearanceCaption"
            app:layout_constraintEnd_toStartOf="@+id/text_confirmed"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_confirmed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_medium"
            android:gravity="center"
            android:text="@string/confirmed"
            android:textAppearance="?attr/textAppearanceCaption"
            android:textColor="@color/blue"
            app:layout_constraintBaseline_toBaselineOf="@+id/text_state_name"
            app:layout_constraintEnd_toStartOf="@+id/text_active"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/text_state_name" />

        <TextView
            android:id="@+id/text_active"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_medium"
            android:gravity="center"
            android:text="@string/active"
            android:textAppearance="?attr/textAppearanceCaption"
            android:textColor="@color/dark_blue"
            app:layout_constraintBaseline_toBaselineOf="@+id/text_state_name"
            app:layout_constraintEnd_toStartOf="@+id/text_recovered"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/text_confirmed" />

        <TextView
            android:id="@+id/text_recovered"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_medium"
            android:gravity="center"
            android:text="@string/recovered"
            android:textAppearance="?attr/textAppearanceCaption"
            android:textColor="@color/green"
            app:layout_constraintBaseline_toBaselineOf="@+id/text_state_name"
            app:layout_constraintEnd_toStartOf="@+id/text_deaths"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/text_active" />

        <TextView
            android:id="@+id/text_deaths"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_display_medium"
            android:gravity="center"
            android:text="@string/deaths"
            android:textAppearance="?attr/textAppearanceCaption"
            android:textColor="@color/red"
            app:layout_constraintBaseline_toBaselineOf="@+id/text_state_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/text_recovered" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>